css spacer fix
fixed extra space that no longer needs to be added on project
descriptions

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1839,7 +1839,7 @@ margin-right: auto; width: 122px; } }
 .project-img-visible { opacity: 1; transition: opacity 0.5s; -moz-transition: opacity 0.5s; -webkit-transition: opacity 0.5s; } -moz-transition: opacity 0.5s; -webkit-transition: opacity 0.5s; }
 
 image.project-img.project-img-visible.bookshelf-img { height:180px; }
-.artifact-space-bottom { float:left; margin-bottom: 25px; }
+.artifact-space-bottom { float:left; margin-bottom: 0px; }
 .project-screen { border-style:solid; border-width:1px; border-color:#202020;}
 
 
